Make actions directed. Split code across several files

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8" />
         <title>Experience Points</title>
         <script src="/static/vendor/socket.io.js"></script>
+        <script src="/static/dist/vectors.js" type="module"></script>
+        <script src="/static/dist/domain.js" type="module"></script>
         <script src="/static/dist/server.js" type="module"></script>
         <script src="/static/dist/app.js" type="module"></script>
         <style>
