--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,6 @@
         <script src="/static/dist/app.js" type="module"></script>
         <script src="/static/dist/stats.js" type="module"></script>
         <script src="/static/dist/sanitizer.js" type="module"></script>
-        <style>
-            * { padding: 0; margin: 0; }
-            canvas { background: #eee; display: block; margin: 0 auto; }
-        </style>
         <link rel="stylesheet" href="/static/styles/main.css" />
     </head>
     <body>
@@ -21,16 +17,23 @@
 
         <div class="layout">
             <canvas id="canvas" class="view" width="450" height="450"></canvas>
+            <div id="login" class="text view">
+                <h1 >You find yourself in a verdant forest.</h1>
+                <form id="loginForm" class="login-form" autocomplete="off">
+                    <input id="loginFormInput" type="text" placeholder="You struggle to recall your name." />
+                    <input type="submit" value="Remember" />
+                </form>
+            </div> 
 
             <!-- Chat could be moved into canvas later, if needed. -->
-            <div id="chat" class="chat">
+            <div id="chat" class="text">
                 <div class="messages" id="messages"></div>
 
-                <form autocomplete="off" id="chatForm" class="chat-form">
-                    <input type="text" id="chatMessageInput" placeholder="Enter a chat message" />
-                    <input type="submit" value="Send" />
-                </form>
-            </div>
+                    <form autocomplete="off" id="chatForm" class="chat-form">
+                        <input type="text" id="chatMessageInput" placeholder="Enter a chat message" />
+                        <input type="submit" value="Send" />
+                    </form>
+                </div>
             <div class="stats">
                 <p class="stats-item"><b id="username">Player</b></p>
                 <p class="stats-item"><b>Level 1 Human</b></p>
