--- a/templates/index.html
+++ b/templates/index.html
@@ -44,11 +44,30 @@
                     <li class="equipment-item">Vorpal Sword</li>
                 </ul>
 
-            <!-- User Commands -->
-            <br>
-              <p><b>Controls</b></p>
-              <p>Move: Arrow Keys</p>
-              <p>Attack: a + direction</p>
+                <!-- User Commands -->
+                <br>
+                <table>
+                    <tr>
+                        <th class="controls wide">Ability</th>
+                        <th class="controls">Control</th>
+                    </tr>
+                    <tr>
+                        <td>Move</td>
+                        <td>Arrow Keys</td>
+                    </tr>
+                    <tr>
+                        <td>Dash</td>
+                        <td>Q + Arrow Key</td>
+                    </tr>
+                    <tr>
+                        <td>Slash</td>
+                        <td>A + Arrow Key</td>
+                    </tr>
+                    <tr>
+                        <td>Aimed Shot</td>
+                        <td>W + Arrow Key</td>
+                    </tr>
+                </table>
           </div>
       </div>
     </body>
